// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProductWhatsIncluded
    block={
        Object {
            "backgroundColor": "foo",
            "products": Array [
              Object {
                "fields": Object {
                  "productHandle": "foo",
                },
              },
            ],
            "title": "foo",
          }
    }
    product={
        Object {
            "available": true,
            "blocks": Array [],
            "cartDetails": "foo",
            "description": "foo",
            "flavorDescription": "foo",
            "gridImage": "foo",
            "handle": "foo",
            "id": "foo",
            "pintImage": "foo",
            "price": 0,
            "subItems": Array [],
            "subItemsAvailable": true,
            "title": "foo",
            "variants": Array [
              Object {},
            ],
          }
    }
    products={Object {}}
    setRef={[Function]}
    whatsIncluded={
        Object {
            "whatsIncludedDrip": false,
            "whatsIncludedIllustration": "",
            "whatsIncludedProducts": Array [],
          }
    }
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="col-12 md-col-6"
>
          <h2
                    className="block-headline my3 nowrap center flex flex-column items-center justify-center"
          >
                    What’s included
          </h2>
</div>,
        <div
          className="flex flex-column col-12 md-col-6"
>
          
</div>,
        null,
      ],
      "className": "flex justify-between relative",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="block-headline my3 nowrap center flex flex-column items-center justify-center"
>
              What’s included
</h2>,
            null,
          ],
          "className": "col-12 md-col-6",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "What’s included",
              "className": "block-headline my3 nowrap center flex flex-column items-center justify-center",
            },
            "ref": null,
            "rendered": "What’s included",
            "type": "h2",
          },
          null,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [],
          "className": "flex flex-column col-12 md-col-6",
        },
        "ref": null,
        "rendered": Array [],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-6"
>
            <h2
                        className="block-headline my3 nowrap center flex flex-column items-center justify-center"
            >
                        What’s included
            </h2>
</div>,
          <div
            className="flex flex-column col-12 md-col-6"
>
            
</div>,
          null,
        ],
        "className": "flex justify-between relative",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="block-headline my3 nowrap center flex flex-column items-center justify-center"
>
                What’s included
</h2>,
              null,
            ],
            "className": "col-12 md-col-6",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "What’s included",
                "className": "block-headline my3 nowrap center flex flex-column items-center justify-center",
              },
              "ref": null,
              "rendered": "What’s included",
              "type": "h2",
            },
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
            "className": "flex flex-column col-12 md-col-6",
          },
          "ref": null,
          "rendered": Array [],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProductWhatsIncluded
    block={
        Object {
            "fields": Object {
              "backgroundColor": "light-pink",
              "illustration": null,
              "products": Array [
                Object {
                  "fields": Object {
                    "productHandle": "",
                  },
                },
              ],
            },
          }
    }
    products={Object {}}
    setRef={[Function]}
    whatsIncluded={
        Object {
            "whatsIncludedDrip": false,
            "whatsIncludedIllustration": "",
            "whatsIncludedProducts": Array [],
          }
    }
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="col-12 md-col-6"
>
          <h2
                    className="block-headline my3 nowrap center flex flex-column items-center justify-center"
          >
                    What’s included
          </h2>
</div>,
        <div
          className="flex flex-column col-12 md-col-6"
>
          
</div>,
        null,
      ],
      "className": "flex justify-between relative",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="block-headline my3 nowrap center flex flex-column items-center justify-center"
>
              What’s included
</h2>,
            null,
          ],
          "className": "col-12 md-col-6",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "What’s included",
              "className": "block-headline my3 nowrap center flex flex-column items-center justify-center",
            },
            "ref": null,
            "rendered": "What’s included",
            "type": "h2",
          },
          null,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [],
          "className": "flex flex-column col-12 md-col-6",
        },
        "ref": null,
        "rendered": Array [],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-6"
>
            <h2
                        className="block-headline my3 nowrap center flex flex-column items-center justify-center"
            >
                        What’s included
            </h2>
</div>,
          <div
            className="flex flex-column col-12 md-col-6"
>
            
</div>,
          null,
        ],
        "className": "flex justify-between relative",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="block-headline my3 nowrap center flex flex-column items-center justify-center"
>
                What’s included
</h2>,
              null,
            ],
            "className": "col-12 md-col-6",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "What’s included",
                "className": "block-headline my3 nowrap center flex flex-column items-center justify-center",
              },
              "ref": null,
              "rendered": "What’s included",
              "type": "h2",
            },
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
            "className": "flex flex-column col-12 md-col-6",
          },
          "ref": null,
          "rendered": Array [],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
